Lab_4/netpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-between-zones
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector:
          matchLabels:
            zone: "west"
      - podSelector:
          matchLabels:
            zone: "east"
  policyTypes:
    - Ingress
